--- a/AmsalemLogic3_1/AmsalemLogic3_1.vbproj
+++ b/AmsalemLogic3_1/AmsalemLogic3_1.vbproj
@@ -194,7 +194,7 @@
     <Compile Include="App_Start\Startup.Auth.vb" />
     <Compile Include="Controllers\AccountController.vb" />
     <Compile Include="Controllers\ManageController.vb" />
-    <Compile Include="Controllers\TestController.vb" />
+    <Compile Include="Controllers\CreditCardesController.vb" />
     <Compile Include="Global.asax.vb">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -273,7 +273,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.vbhtml" />
     <Content Include="Views\Shared\Lockout.vbhtml" />
     <Content Include="Views\Shared\_LoginPartial.vbhtml" />
-    <Content Include="Views\Test\MyView.vbhtml" />
+    <Content Include="Views\CreditCardes\MyView.vbhtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
