--- a/AmsalemLogic3_1/Web.config
+++ b/AmsalemLogic3_1/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="AX_Israel" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\BALLON\Desktop\AmsalemProject\KinneretProjectPBU\Amsalem.Types\Eli_AmsalemCreditCard1.0.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="AX_USA" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\BALLON\Desktop\AmsalemProject\KinneretProjectPBU\Amsalem.Types\Eli_AmsalemCreditCard1.0.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="AX_Israel" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Repository\KinneretProjectPBU\Amsalem.Types\Eli_AmsalemCreditCard1.0.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="AX_USA" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Repository\KinneretProjectPBU\Amsalem.Types\Eli_AmsalemCreditCard1.0.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="AmsLogic_DBEntities" connectionString="metadata=res://*/EntityFramework.Transaction.csdl|res://*/EntityFramework.Transaction.ssdl|res://*/EntityFramework.Transaction.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=AmsLogic_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
