--- a/AmsalemLogic.Tests/AmsalemLogic.Tests.csproj
+++ b/AmsalemLogic.Tests/AmsalemLogic.Tests.csproj
@@ -65,12 +65,15 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
     <Compile Include="AXCreditCards.cs" />
+    <Compile Include="Classes\PaidByUsHandlerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
