--- a/AmsalemLogic3_1/Web.config
+++ b/AmsalemLogic3_1/Web.config
@@ -11,11 +11,12 @@
   <connectionStrings>
     <add name="AX_Israel" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Repository\KinneretProjectPBU\Amsalem.Types\Eli_AmsalemCreditCard1.0.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="AX_USA" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Repository\KinneretProjectPBU\Amsalem.Types\Eli_AmsalemCreditCard1.0.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="AmsLogic_DBEntities" connectionString="metadata=res://*/EntityFramework.Transaction.csdl|res://*/EntityFramework.Transaction.ssdl|res://*/EntityFramework.Transaction.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=AmsLogic_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="Entities" connectionString="metadata=&quot;res://*/Entity Framework.TransactionEF.csdl|res://*/Entity Framework.TransactionEF.ssdl|res://*/Entity Framework.TransactionEF.msl&quot;;provider=System.Data.SqlClient;provider connection string='Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=&quot;C:\Repository\KinneretProjectPBU\AmsalemLogic.NewLogic\Entity Framework\AmsDB.mdf&quot;;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework'" providerName="System.Data.EntityClient" />-->
+    <add name="Entities" connectionString="metadata=&quot;res://*/Entity Framework.TransactionEF.csdl|res://*/Entity Framework.TransactionEF.ssdl|res://*/Entity Framework.TransactionEF.msl&quot;;provider=System.Data.SqlClient;provider connection string='Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=AmsDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False'" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
+    <add key="webpages:Enabled" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
